Finalizing week 5 project
