# bookmark/controllers/books.js
@@ -40,8 +40,16 @@ const createBook = async (req, res) => {
 const updateBook = async (req, res) => {
   /* #swagger.parameters['body'] = {
             in: 'body',
-            description: 'Update book information',
-            schema: { $ref: '#/definitions/Book' }
+            description: 'Update book details',
+            schema: {
+                title: 'New Title',
+                isbn: '978-0000000000',
+                description: 'New Description',
+                price: 49.90,
+                stockQuantity: 10,
+                authorId: '64b1f... (ObjectId)',
+                genreId: 'Fiction'
+            }
     } */
   try {
     const updatedBook = await Book.findByIdAndUpdate(req.params.id, req.body, { new: true });
